<resources>
    <string name="app_name">cms6</string>
    <string name="todo1">TODO</string>
    <string name="username">Username</string>
    <string name="btn_password">Password</string>
    <string name="btn_login">login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_log_in_with_google">Log In with Google</string>
    <string name="btn_log_in_with_facebook">Log In with Facebook</string>
    <string name="btn_forget_password">Forget Password ?</string>
    <string name="tv_forget_password">tv_forgot_password</string>
    <string name="tv_add_in_family_of1">Add in Family of</string>
    <string name="tv_cms1">CMS</string>
    <string name="tv_full_name">Full Name</string>
    <string name="tv_address">Address</string>
    <string name="et_city1">City</string>
    <string name="todo3">TODO</string>
    <string name="et_email_id1">Email Id</string>
    <string name="rbtn_male1">Male</string>
    <string name="rbtn_female1">Female</string>
    <string name="et_phone1">Phone</string>
    <string name="rbtn_monitor1">Monitor</string>
    <string name="rbtn_admin1">Admin</string>
    <string name="et_password1">Password</string>
    <string name="btn_save1">Save</string>
    <string name="todo4">TODO</string>
    <string name="et_full_name">et_full_name</string>
    <string name="tv_addess">et_address</string>
    <string name="et_address">et_address</string>
    <string name="todo2">TODO</string>
    <string name="todo5">TODO</string>
    <string name="tv_add_in_family_of">Add in Family of</string>
    <string name="tv_cms">CMS</string>
    <string name="et_full_name1">full_name</string>
    <string name="et_address1">Address</string>
    <string name="et_city">City</string>
    <string name="et_email_id">Email Id</string>
    <string name="rbtn_male">Male</string>
    <string name="rbtn_female">Female</string>
    <string name="et_phone">Phone</string>
    <string name="rbtn_monitor">Monitor</string>
    <string name="rbtn_admin">Admin</string>
    <string name="et_password">Password</string>
    <string name="btn_save">Save</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add">MainActivity</string>
    <string name="save">Save</string>
    <string name="city_name">City Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_registered_email">Enter your registered Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="radar_chart">Radar Chart</string>
    <string name="enter_x_value">ENTER X VALUE</string>
    <string name="x_value">X VALUE</string>
    <string name="enter_y_value">ENTER Y VALUE</string>
    <string name="y_value">Y VALUE</string>
    <string name="insert">INSERT</string>
    <string name="line_graph">Line Graph</string>
</resources>