<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add3">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundcolor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddFamily">

            <ImageView
                android:id="@+id/img_cms_family"
                android:layout_width="307dp"
                android:layout_height="98dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/circlelogo" />

            <TextView
                android:id="@+id/tv_add_in_family_of"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gothambold"
                android:text="New Model in"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_cms_family"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_cms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothambold"
                android:text="@string/tv_cms"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_in_family_of"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="43dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_cms_family"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/abc_vector_test" />

            <EditText
                android:id="@+id/tv_email"
                android:layout_width="320dp"
                android:layout_height="43dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:ems="10"
                android:gravity="center"
                android:hint="Car model name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cms"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="320dp"
                android:layout_height="43dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:ems="10"
                android:gravity="center"
                android:hint="Gst"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone"
                app:layout_constraintVertical_bias="0.45" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="320dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:ems="10"
                android:gravity="center"
                android:hint="Description"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_address"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_email_id"
                android:layout_width="320dp"
                android:layout_height="43dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:ems="10"
                android:gravity="center"
                android:hint="Color"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="320dp"
                android:layout_height="43dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:ems="10"
                android:fontFamily="@font/gothambook"
                android:gravity="center"
                android:hint="Selling Price"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_id"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button"
                android:fontFamily="@font/gothambold"
                android:text="@string/btn_save"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_city"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="274dp"
                android:layout_height="176dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="TODO"
                android:src="@drawable/car"
                app:layout_constraintBottom_toBottomOf="@+id/et_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation3"
        app:itemBackground="@color/colorAccent"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_navigation3"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="labeled"/>

</RelativeLayout>